--- a/src/SASS/style.scss
+++ b/src/SASS/style.scss
@@ -1,7 +1,11 @@
+$pink: rgb(247,181,196);
+$skyblue: rgb(99,197,206);
+
 body,html{
 	width: 100%;
 	height: 100%;
 	margin: 0;
+	background: #000;
 }
 
 .Contents{
@@ -10,25 +14,53 @@ body,html{
 	position: relative;
 }
 
-#LoadingPage{
+#ContentBackVideo{
+	height: 100%;
 	position: fixed;
 	top: 0;
 	left: 0;
-	background: #111;
 }
 
-#LoadingItemBox{
-	width: 100px;
-	height: 100px;
-	position: absolute;
-	top: calc(50% - 50px);
-	left: calc(50% - 50px);
-}
+/****Content1****/
 
-.LoadingItems{
-	width: 25px;
-	height: 25px;
-	float: left;
-	background: rgb(124,157,255);
-}
+	#Content1{
+		color: #FFF;
+	}
 
+	#Content1Header1{
+		position: absolute;
+		top: 40%;
+		right: 55%;
+		font-size: 50px;
+	}
+
+	#Content1HeaderSlashBox{
+		width: 80px;
+		height: 100px;
+		position: absolute;
+		top: calc(40% - 10px);
+		left: calc(50% - 40px);
+	}
+
+	#Content1HeaderSlash{
+		position: absolute;
+		top: 45px;
+		left: -56px;
+		width: 200px;
+		height: 1px;
+		background:#fff;
+		-webkit-transform: rotate(-50deg);
+		   -moz-transform: rotate(-50deg);
+		    -ms-transform: rotate(-50deg);
+		     -o-transform: rotate(-50deg);
+		        transform: rotate(-50deg);
+	}
+
+	#Content1Header2{
+		position: absolute;
+		top: 40%;
+		left: 55%;
+		font-size: 50px;
+	}
+
+/****Content1****/
