--- a/src/SASS/animation.scss
+++ b/src/SASS/animation.scss
@@ -48,14 +48,27 @@
     }
 }
 
+@include keyframes(Content1Arrow){
+  0% {
+    bottom: 120px;
+  }
+  100% {
+    bottom: 100px;
+  }
+}
+
 #Content1Header1{
-    @include animation(LoadFinishAnimation1 1s ease 0s);
+  @include animation(LoadFinishAnimation1 1s ease 0s);
 }
 
 #Content1Header2{
-    @include animation(LoadFinishAnimation1 1s ease 0.5s);
+  @include animation(LoadFinishAnimation1 1s ease 0.5s);
 }
 
 #Content1HeaderSlashBox{
-    @include animation(LoadFinishAnimation2 1.5s ease 1s);
+  @include animation(LoadFinishAnimation2 1.5s ease 1s);
+}
+
+#Content1HeaderBottomArrow{
+  @include animation(Content1Arrow 0.8s linear 0s infinite alternate);
 }
