--- a/src/SASS/style.scss
+++ b/src/SASS/style.scss
@@ -1,11 +1,15 @@
 $pink: rgb(247,181,196);
 $skyblue: rgb(99,197,206);
+@import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
 
 body,html{
 	width: 100%;
 	height: 100%;
 	margin: 0;
 	background: #000;
+	letter-spacing: 2px;
+	font-family: 'Noto Sans Japanese', sans-serif;
+	font-weight: 100;
 }
 
 .Contents{
@@ -27,40 +31,45 @@ body,html{
 		color: #FFF;
 	}
 
-	#Content1Header1{
+	#Content1Logo{
+		width: 500px;
 		position: absolute;
-		top: 40%;
-		right: 55%;
-		font-size: 50px;
+		bottom: 53%;
+		left: calc(50% - 250px);
 	}
 
-	#Content1HeaderSlashBox{
-		width: 80px;
-		height: 100px;
+	#Content1SubHeader{
+		width: 100%;
+		text-align: center;
 		position: absolute;
-		top: calc(40% - 10px);
-		left: calc(50% - 40px);
+		top: 53%;
 	}
 
-	#Content1HeaderSlash{
+	#Content1HeaderBottomArrow{
+		width: 22px;
+		height: 22px;
 		position: absolute;
-		top: 45px;
-		left: -56px;
-		width: 200px;
-		height: 1px;
-		background:#fff;
-		-webkit-transform: rotate(-50deg);
-		   -moz-transform: rotate(-50deg);
-		    -ms-transform: rotate(-50deg);
-		     -o-transform: rotate(-50deg);
-		        transform: rotate(-50deg);
-	}
-
-	#Content1Header2{
-		position: absolute;
-		top: 40%;
-		left: 55%;
-		font-size: 50px;
+		left: calc(50% - 15px);
+		bottom: 100px;
+		border-left: 1px solid #fff;
+		border-top: 1px solid #fff;
+		-webkit-transform: rotate(-135deg);
+		   -moz-transform: rotate(-135deg);
+		    -ms-transform: rotate(-135deg);
+		     -o-transform: rotate(-135deg);
+		        transform: rotate(-135deg);
 	}
 
 /****Content1****/
+
+
+
+
+/****Content2****/
+
+	#Content2{
+		border-top: 1px solid $skyblue;
+		background: rgb(10,10,20);
+	}
+
+/****Content2****/
