--- a/src/SASS/style.scss
+++ b/src/SASS/style.scss
@@ -2,6 +2,20 @@ $pink: rgb(247,181,196);
 $skyblue: rgb(99,197,206);
 @import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
 
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: local('Material Icons'),
+       local('MaterialIcons-Regular'),
+       url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
+       url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
+       url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
+}
+
+
+
 body,html{
 	width: 100%;
 	height: 100%;
@@ -31,6 +45,32 @@ button{
 	position: fixed;
 	top: 0;
 	left: 0;
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 70px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+  color: $skyblue;
 }
 
 /****Content1****/
@@ -84,13 +124,54 @@ button{
 
 
 
+/****Content1****/
+
+	#Content5{
+		background: #fff;
+		border-top: 1px solid $skyblue;
+		border-bottom: 1px solid $skyblue;
+		height: auto;
+		color: #000;
+	}
+
+	#Content5HeaderBorderTop{
+		width: 80px;
+		height: 3px;
+		-webkit-border-radius: 10px;
+		        border-radius: 10px;
+		position: relative;
+		top: 80px;
+		margin-bottom: 120px;
+		margin-left: calc(50% - 40px);
+		z-index: 3;
+	}
+
+	#Content5Header{
+		width: 100%;
+		text-align: center;
+		font-size: 25px;
+		margin-top: 40px;
+		font-weight: 200;
+	}
+
+	#Content5TextBox{
+		width: 70%;
+		margin-top: 30px;
+		margin-left: 15%;
+		line-height: 2;
+		text-align: center;
+		font-size: 12px;
+		letter-spacing: 5px;
+	}
+
+/****Content1****/
+
+
 
 /****Content2****/
 
 	#Content2{
 		height: auto;
-		border-top: 1px solid $skyblue;
-		border-bottom: 1px solid $pink;
 		background: rgb(20,20,30);
 	}
 
@@ -128,7 +209,7 @@ button{
 		margin-left: 80px;
 		font-size: 12px;
 		letter-spacing: 3px;
-		line-height: 1.5;
+		line-height: 1.6;
 		color: #ddd;
 		margin-top: 40px;
 	}
@@ -136,11 +217,113 @@ button{
 /****Content2****/
 
 
+/****Content3****/
+
+	#Content6{
+		background: #fff;
+		height: auto;
+	}
+
+	.Content6ItemBox{
+		width: 160px;
+		height: 250px;
+		margin-top: 40px;
+		margin-bottom: 50px;
+		margin-left: calc((100% - 800px) / 6);
+		text-align: center;
+		float: left;
+		font-size: 12px;
+		letter-spacing: 3px;;
+	}
+
+	.Content6ItemHeader{
+		font-weight: 200;
+		font-size: 15px;
+		margin-top: 5px;
+		margin-bottom: 10px;
+		color: #000;
+	}
+
+/****Content3****/
+
+
+/****Content3****/
+
+	#Content7{
+		background: rgba(0,0,0,0.7);
+		height: auto;
+		color: #FFF;
+	}
+
+	#Content7HeaderBorderTop{
+		width: 80px;
+		height: 3px;
+		-webkit-border-radius: 10px;
+		        border-radius: 10px;
+		position: relative;
+		top: 80px;
+		margin-bottom: 120px;
+		margin-left: 200px;
+		z-index: 3;
+	}
+
+	#Content7Header{
+		width: calc(100% - 400px);
+		font-size: 25px;
+		margin-top: 40px;
+		margin-left: 200px;
+		font-weight: 200;
+	}
+
+	.ContentTextLeft{
+		width: calc(100% - 400px);
+		font-size: 12px;
+		margin-top: 40px;
+		margin-left: 200px;
+	}
+
+/****Content3****/
+
+
+/****Content3****/
+
+	#Content8{
+		background: #fff;
+		height: 1200px;
+		color: #000;
+		font-size: 14px;
+	}
+
+	#Content7Header1{
+		font-size: 60px;
+		color: $skyblue;
+	}
+
+	#Content7Header2{
+		position: relative;
+		top: 5px;
+		font-size: 70px;
+		color: $pink;
+	}
+
+	.Content7Q{
+		font-size: 50px;
+		color: $skyblue;
+	}
+
+	.Content7A{
+		font-size: 50px;
+		color: $pink;
+	}
+
+/****Content3****/
+
+
 
 /****Content3****/
 
 	#Content3{
-		height: 500px;
+		height: auto;
 		background: rgba(0,0,0,0.7);
 	}
 
@@ -175,12 +358,12 @@ button{
 	.Content3Img2{
 		width: 200px;
 		margin-top: 60px;
+		margin-bottom: 60px;
 		margin-left: calc((100% - 800px) / 5);
 	}
 
 
 /****Content3****/
-
 
 
 /****Content4****/
