--- a/src/SASS/style.scss
+++ b/src/SASS/style.scss
@@ -32,6 +32,7 @@ button{
 	letter-spacing: 2px;
 	font-family: 'Noto Sans Japanese', sans-serif;
 	font-weight: 100;
+	outline: none;
 }
 
 .Contents{
@@ -155,13 +156,13 @@ button{
 	}
 
 	#Content5TextBox{
-		width: 70%;
+		width: 800px;
 		margin-top: 30px;
-		margin-left: 15%;
+		margin-left: calc(50% - 400px);
 		line-height: 2;
 		text-align: center;
-		font-size: 12px;
-		letter-spacing: 5px;
+		font-size: 14px;
+		letter-spacing: 4px;
 	}
 
 /****Content1****/
