--- a/src/SASS/style.scss
+++ b/src/SASS/style.scss
@@ -226,11 +226,11 @@ button{
 	}
 
 	.Content6ItemBox{
-		width: 160px;
-		height: 250px;
+		width: 150px;
+		height: 300px;
 		margin-top: 40px;
 		margin-bottom: 50px;
-		margin-left: calc((100% - 800px) / 6);
+		margin-left: calc((100% - 900px) / 7);
 		text-align: center;
 		float: left;
 		font-size: 12px;
@@ -425,3 +425,25 @@ button{
 
 
 /****Content4****/
+
+
+
+@media screen and (min-width: 901px) {
+	body{
+		width: 100%;
+	}
+
+	.Contents{
+		width: 100%;
+	}
+}
+
+@media screen and (max-width: 900px) {
+	body{
+		width: 900px;
+	}
+
+	.Contents{
+		width: 900px;
+	}
+}
