--- a/src/SASS/style.scss
+++ b/src/SASS/style.scss
@@ -14,45 +14,11 @@ $skyblue: rgb(99,197,206);
        url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
 }
 
-
-
-body,html{
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	background: #000;
-	letter-spacing: 2px;
-	font-family: 'Noto Sans Japanese', sans-serif;
-	font-weight: 100;
-}
-
-button{
-	background: none;
-	border: none;
-	letter-spacing: 2px;
-	font-family: 'Noto Sans Japanese', sans-serif;
-	font-weight: 100;
-	outline: none;
-}
-
-.Contents{
-	width: 100%;
-	height: 100%;
-	position: relative;
-}
-
-#ContentBackVideo{
-	height: 100%;
-	position: fixed;
-	top: 0;
-	left: 0;
-}
-
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
-  font-size: 70px;  /* Preferred icon size */
+  font-size: 140px;  /* Preferred icon size */
   display: inline-block;
   line-height: 1;
   text-transform: none;
@@ -74,376 +40,283 @@ button{
   color: $skyblue;
 }
 
-/****Content1****/
+
+
+body,html{
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	background: #000;
+	letter-spacing: 2px;
+	font-family: 'Noto Sans Japanese', sans-serif;
+	font-weight: 100;
+	color: #FFF;
+	-webkit-text-size-adjust: 100%;
+}
+
+button{
+	background: none;
+	border: none;
+	letter-spacing: 2px;
+	font-family: 'Noto Sans Japanese', sans-serif;
+	font-weight: 100;
+	outline: none;
+}
+
+.Contents{
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+
+.ContentsHeaderTopBorderCenter{
+	width: 150px;
+	height: 10px;
+	margin-bottom: 100px;
+	margin-left: calc(50% - 75px);
+	position: relative;
+	top: 80px;
+}
+
+.ContentsHeaderTopBorderLeft{
+	width: 100px;
+	height: 10px;
+	margin-bottom: 100px;
+	margin-left: 10%;
+	position: relative;
+	top: 80px;
+}
+
+.ContentsHeaderCenter{
+	width: 100%;
+	font-size: 60px;
+	text-align: center;
+	letter-spacing: 10px;
+}
+
+.ContentsHeaderLeft{
+	width: 80%;
+	margin-left: 10%;
+	font-size: 45px;
+	letter-spacing: 10px;
+}
+
+.ContentsTextCenter{
+	width: 80%;
+	margin-top: 100px;
+	margin-left: 10%;
+	text-align: center;
+	font-size: 8px;
+	line-height: 3;
+}
+
+.ContentsTextLeft{
+	width: 80%;
+	margin-top: 100px;
+	margin-left: 10%;
+	font-size: 8px;
+	line-height: 3;
+}
+
+
+/***Content1***/
 
 	#Content1{
-		color: #FFF;
-		height: calc(100% - 1px);
+		background: url(../IMG/back.png);
+		-webkit-background-size: cover;
+		     -o-background-size: cover;
+		        background-size: cover;
 	}
 
 	#Content1Logo{
-		width: 500px;
+		width: 80%;
 		position: absolute;
-		bottom: 55%;
-		left: calc(50% - 250px);
+		bottom: 65%;
+		left: 10%;
 	}
 
-	#Content1SubHeader{
-		width: 100%;
-		text-align: center;
+	#Content1HeaderSub{
+		width: 80%;
 		position: absolute;
-		top: 47%;
+		top: 37%;
+		left: 10%;
+		font-size: 30px;
+		text-align: center;
 	}
 
 	#Content1Btn{
-		width: 230px;
-		height: 50px;
+		width: 500px;
+		height: 100px;
 		position: absolute;
-		top: calc(45% + 100px);
-		left: calc(50% - 115px);
-		font-size: 15px;
-		font-weight: 200;
+		top: 60%;
+		left: calc(50% - 250px);
+		font-size: 25px;
 		color: #FFF;
 	}
 
-	#Content1HeaderBottomArrow{
-		width: 22px;
-		height: 22px;
-		position: absolute;
-		left: calc(50% - 15px);
-		bottom: 100px;
-		border-left: 1px solid #fff;
-		border-top: 1px solid #fff;
-		-webkit-transform: rotate(-135deg);
-		   -moz-transform: rotate(-135deg);
-		    -ms-transform: rotate(-135deg);
-		     -o-transform: rotate(-135deg);
-		        transform: rotate(-135deg);
-	}
 
-/****Content1****/
+/***Content1***/
 
 
-
-/****Content1****/
-
-	#Content5{
-		background: #fff;
-		border-top: 1px solid $skyblue;
-		border-bottom: 1px solid $skyblue;
-		height: auto;
-		color: #000;
-	}
-
-	#Content5HeaderBorderTop{
-		width: 80px;
-		height: 3px;
-		-webkit-border-radius: 10px;
-		        border-radius: 10px;
-		position: relative;
-		top: 80px;
-		margin-bottom: 120px;
-		margin-left: calc(50% - 40px);
-		z-index: 3;
-	}
-
-	#Content5Header{
-		width: 100%;
-		text-align: center;
-		font-size: 25px;
-		margin-top: 40px;
-		font-weight: 200;
-	}
-
-	#Content5TextBox{
-		width: 800px;
-		margin-top: 30px;
-		margin-left: calc(50% - 400px);
-		line-height: 2;
-		text-align: center;
-		font-size: 14px;
-		letter-spacing: 4px;
-	}
-
-/****Content1****/
-
-
-
-/****Content2****/
+/***Content2***/
 
 	#Content2{
 		height: auto;
-		background: rgba(20,20,30,0.5);
 	}
 
-	#Content2Left{
-		width: 40%;
-		float: left;
-	}
 
-	#Content2Right{
-		width: 60%;
-		float: left;
-	}
-
-	#Content2HeaderBorderTop{
-		width: 80px;
-		height: 3px;
-		-webkit-border-radius: 10px;
-		        border-radius: 10px;
-		margin-top: 100px;
-		margin-left: 80px;
-		z-index: 3;
-	}
-
-	#Content2Header{
-		font-size: 25px;
-		color: #FFF;
-		font-weight: 200;
-		margin-left: 80px;
-		margin-top: 30px;
-		line-height: 2;
-	}
-
-	#Content2TextBox{
-		width: calc(100% - 160px);
-		margin-left: 80px;
-		font-size: 12px;
-		letter-spacing: 3px;
-		line-height: 1.6;
-		color: #ddd;
-		margin-top: 40px;
-	}
-
-/****Content2****/
+/***Content2***/
 
 
-/****Content3****/
-
-	#Content6{
-		background: #fff;
-		height: auto;
-	}
-
-	.Content6ItemBox{
-		width: 150px;
-		height: 270px;
-		margin-top: 40px;
-		margin-bottom: 50px;
-		margin-left: calc((100% - 900px) / 7);
-		text-align: center;
-		float: left;
-		font-size: 12px;
-		letter-spacing: 3px;;
-	}
-
-	.Content6ItemHeader{
-		font-weight: 200;
-		font-size: 15px;
-		margin-top: 5px;
-		margin-bottom: 10px;
-		color: #000;
-	}
-
-/****Content3****/
-
-
-/****Content3****/
-
-	#Content7{
-		background: rgba(0,0,0,0.7);
-		height: auto;
-		color: #FFF;
-	}
-
-	#Content7HeaderBorderTop{
-		width: 80px;
-		height: 3px;
-		-webkit-border-radius: 10px;
-		        border-radius: 10px;
-		position: relative;
-		top: 80px;
-		margin-bottom: 120px;
-		margin-left: 200px;
-		z-index: 3;
-	}
-
-	#Content7Header{
-		width: calc(100% - 400px);
-		font-size: 25px;
-		margin-top: 40px;
-		margin-left: 200px;
-		font-weight: 200;
-	}
-
-	.ContentTextLeft{
-		width: calc(100% - 400px);
-		font-size: 13px;
-		margin-top: 40px;
-		margin-left: 200px;
-	}
-
-/****Content3****/
-
-
-/****Content3****/
-
-	#Content8{
-		background: #fff;
-		height: 1200px;
-		color: #000;
-		font-size: 14px;
-	}
-
-	#Content7Header1{
-		font-size: 60px;
-		color: $skyblue;
-	}
-
-	#Content7Header2{
-		position: relative;
-		top: 5px;
-		font-size: 70px;
-		color: $pink;
-	}
-
-	.Content7Q{
-		font-size: 50px;
-		color: $skyblue;
-	}
-
-	.Content7A{
-		font-size: 50px;
-		color: $pink;
-	}
-
-/****Content3****/
-
-
-
-/****Content3****/
+/***Content2***/
 
 	#Content3{
 		height: auto;
-		background: rgba(0,0,0,0.7);
+		background: url(../IMG/back.jpg);
+		-webkit-background-size: cover;
+		     -o-background-size: cover;
+		        background-size: cover;
 	}
 
-	#Content3HeaderBorderTop{
-		width: 80px;
-		height: 3px;
-		-webkit-border-radius: 10px;
-		        border-radius: 10px;
-		position: relative;
-		top: 80px;
-		margin-bottom: 120px;
-		margin-left: calc(50% - 40px);
-		z-index: 3;
-	}
-
-	#Content3Header{
+	#Content3Shadow{
 		width: 100%;
-		text-align: center;
-		font-size: 25px;
-		margin-top: 40px;
-		font-weight: 200;
-		color: #FFF;
-	}
-
-	.Content3Img1{
-		width: 250px;
-		margin-top: 60px;
-		margin-left: calc((100% - 750px) / 4);
-		float: left;
-	}
-
-	.Content3Img2{
-		width: 200px;
-		margin-top: 60px;
-		margin-bottom: 60px;
-		margin-left: calc((100% - 800px) / 5);
+		height: auto;
+		background: rgba(0,0,0,0.8);
 	}
 
 
-/****Content3****/
+/***Content2***/
 
 
-/****Content4****/
+/***Content2***/
 
 	#Content4{
 		height: auto;
-		background: #fff;
+		background: #FFF;
 	}
 
-	#Content4HeaderBorderTop{
-		width: 80px;
-		height: 3px;
-		-webkit-border-radius: 10px;
-		        border-radius: 10px;
-		position: relative;
-		top: 80px;
-		margin-bottom: 120px;
-		margin-left: calc(50% - 40px);
-		z-index: 3;
-	}
-
-	#Content4Header{
-		width: 100%;
+	.Content4ItemBox{
+		width: 46%;
+		margin-left: calc((100% - 92%) / 3);
+		margin-bottom: 100px;
 		text-align: center;
-		font-size: 25px;
-		margin-top: 40px;
+		float: left;
+		color: #000;
+		font-size: 30px;
+	}
+
+	.Content4ItemHeader{
+		font-size: 40px;
 		font-weight: 200;
+	}
+
+/***Content2***/
+
+
+/***Content2***/
+
+	#Content5{
+		height: auto;
+		background: #000;
+	}
+
+	.Content4ItemBox{
+		width: 46%;
+		margin-left: calc((100% - 92%) / 3);
+		margin-bottom: 100px;
+		text-align: center;
+		float: left;
+		color: #000;
+		font-size: 30px;
+	}
+
+	.Content4ItemHeader{
+		font-size: 40px;
+		font-weight: 200;
+	}
+
+/***Content2***/
+
+
+/***Content2***/
+
+	#Content6{
+		height: auto;
+		background: #fff;
 		color: #000;
 	}
 
-	.Content4Inputs{
-		width: 850px;
-		height: 30px;
-		margin-left: calc(50% - 425px);
-		margin-right: calc(50% - 425px);
-		margin-top: 50px;
+	.Content6Q{
+		color: $skyblue;
+		font-size: 50px;
 	}
 
-	#Content4TextArea{
-		width: 850px;
-		height: 200px;
-		margin-left: calc(50% - 425px);
-		margin-right: calc(50% - 425px);
-		margin-top: 50px;
+	.Content6A{
+		color: $pink;
+		font-size: 50px;
 	}
 
-	#Content4SendBtn{
-		width: 850px;
-		height: 60px;
-		margin-left: calc(50% - 425px);
-		margin-right: calc(50% - 425px);
-		margin-top: 50px;
-		margin-bottom: 150px;
-		color: #FFF;
-		font-size: 16px;
-		font-weight: 200;
+/***Content2***/
+
+
+/***Content2***/
+
+	#Content7{
+		height: auto;
+		background: url(../IMG/back.png);
+		-webkit-background-size: cover;
+		     -o-background-size: cover;
+		        background-size: cover;
 	}
 
+	.Content7Img{
+		width: 45%;
+		margin-left: calc((100% - 90%) / 3);
+	}
 
-/****Content4****/
+/***Content2***/
 
 
+/***Content2***/
 
-@media screen and (min-width: 901px) {
-	body{
+	#Content8{
+		height: auto;
+		background: #FFF;
+	}
+
+	.Content8Inputs{
 		width: 100%;
+		height: 100px;
+		background: rgba(99,197,206,0.4);
+		color: #000;
+		margin: 0;
+		margin-top: 50px;
+		margin-bottom: 50px;
+		border: none;
+		font-size: 25px;
+		letter-spacing: 3px;
 	}
 
-	.Contents{
+	#Content8TextArea{
 		width: 100%;
+		height: 500px;
+		background: rgba(99,197,206,0.4);
+		color: #000;
+		margin: 0;
+		margin-top: 50px;
+		border: none;
+		font-size: 25px;
 	}
-}
 
-@media screen and (max-width: 900px) {
-	body{
-		width: 900px;
+	#Content8SendBtn{
+		width: 100%;
+		height: 100px;
+		margin-top: 50px;
+		margin-bottom: 50px;
+		font-size: 30px;
+		letter-spacing: 3px;
 	}
 
-	.Contents{
-		width: 900px;
-	}
-}
+
+/***Content2***/
+
